--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<link rel="stylesheet" href="assets/css/responsive.css">
 		
 		<!-- Favicon -->
-        <link rel="icon" type="image/png" href="assets/img/favicon.png">
+        <link rel="icon" type="image/png" href="">
         <!-- TITLE -->
         <title>UK Website</title>
     </head>
