--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
     <body>
 		<!-- Start Preloader Area -->
-		<div class="preloader">
+<!-- 		<div class="preloader">
 			<div class="lds-ripple">
 				<div></div>
 				<div></div>
 			</div>
-		</div>
+		</div> -->
         <!-- End Preloader Area -->
 
 		<!-- Start Navbar Area -->
